--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <title>placeholder</title>
-<iframe src="https://discordapp.com/widget?id=710294722677047396&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+
+<body>
+  <iframe src="https://discordapp.com/widget?id=710294722677047396&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+</body>
