--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<title>placeholder</title>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About me</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 
-<body>
-  <iframe src="https://discordapp.com/widget?id=710294722677047396&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-</body>
+  <body>
+      <iframe src="https://discordapp.com/widget?id=710294722677047396&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+  </body>
+
+</html>
