Logo and Header added

--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
   <head>
     <title>About me</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   </head>
 
   <body>
-      <iframe src="https://discordapp.com/widget?id=710294722677047396&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+<div class="header">
+  <h1>Mahir-Sparkess</h1>
+  <img src="assets/SparkessLogo.png" alt="Sparkess Logo" width="250" height="250">
+  <p></p>
+</div>
+
+<div class="row">
+      <h2>About me</h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+</div>
+
+
+<div class="footer">
+  <h2>Footer</h2>
+</div>
+
+
   </body>
 
 </html>
