--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   </head>
 
-  <body>
+<body>
+
 <div class="header">
   <h1>Mahir-Sparkess</h1>
   <img src="assets/SparkessLogo.png" alt="Sparkess Logo" width="250" height="250">
   <p></p>
 </div>
 
-<div class="row">
-      <h2>About me</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
+<div class="about_me">
+  <h2>About me</h2>
+  <h5>Title description, Dec 7, 2017</h5>
+  <div class="fakeimg" style="height:200px;">Image</div>
+  <p>Some text..</p>
 </div>
 
 
@@ -26,6 +27,6 @@
 </div>
 
 
-  </body>
+</body>
 
 </html>
