--- a/index.html
+++ b/index.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>About me</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
 <body>
-
-<div class="header">
-  <h1>Mahir-Sparkess</h1>
-  <img src="assets/SparkessLogo.png" alt="Sparkess Logo" width="250" height="250">
-  <p></p>
-</div>
-
-<div class="about_me">
-  <h2>About me</h2>
-  <h5>Title description, Dec 7, 2017</h5>
-  <div class="fakeimg" style="height:200px;">Image</div>
-  <p>Some text..</p>
-</div>
-
-
-<div class="footer">
-  <h2>Footer</h2>
-</div>
-
-
+    <div id="content">
+        <div class="header">
+            <h1>Mahir-Sparkess</h1>
+            <img src="assets/SparkessLogo.png" alt="Sparkess Logo" width="250" height="250">
+            <p></p>
+        </div>
 </body>
 
 </html>
